syntax = "proto3";
package proto.vox;

message ChatListRequest
{
    bytes user_uuid = 1;
}
